[package]
name = "nora_ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = "2.0.0-pre.1"
rand = "0.8"
sha2 = "0.10"
p256 = "0.11"
ecdsa = "0.14"
digest = "0.10"
chacha20 = "0.9"
poly1305 = "0.7"
generic-array = "0.14"
elliptic-curve = "0.12"
subtle = "2.4"
futures = "0.3"
# FIXME separate binary into a separate crate
async-std = { version = "1.11", features = ["attributes", "unstable"] }
