[package]
name = "nora_ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
nora_ssh_core = { path = "../nora_ssh_core" }
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
x25519-dalek = "2.0.0-pre.1"
sha2 = "0.10"
p256 = "0.11"
ecdsa = "0.14"
digest = "0.10"
generic-array = "0.14"
elliptic-curve = "0.12"
subtle = "2.4"
