[package]
name = "nora_ssh"
version = "0.1.0"
edition = "2021"

[features]
no_send = []

[dependencies]
nora_ssh_core = { path = "../nora_ssh_core" }
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
sha2 = "0.10"
p256 = "0.11"
ecdsa = "0.14"
digest = "0.10"
generic-array = "0.14"
elliptic-curve = "0.12"
subtle = "2.4"

[dependencies.x25519-dalek]
version = "2.0.0-pre.1"
default-features = false
features = ["u64_backend"]
